--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Bro2</title>
+    <script>
+        window.prompt("test");
+    </script>
 </head>
 <body>
 个人博客
 <br/>
-<img src="https://avatars3.githubusercontent.com/u/19831098?v=3&s=40" />
 </body>
 </html>
