--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Bro2</title>
     <script>
-        window.prompt("test");
+        window.prompt("test1");
+        window.prompt("test2");
     </script>
 </head>
 <body>
