--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Bro2</title>
     <script>
-        window.prompt("test1");
-        window.prompt("test2");
+        for (i = 0; i < 10; i++) {
+            window.prompt("test: " + i);
+        }
     </script>
 </head>
 <body>
