--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Bro2</title>
-    <script>
-        for (i = 0; i < 10; i++) {
-            window.prompt("test: " + i);
-        }
-    </script>
+    <title>Brotoo</title>
 </head>
 <body>
-个人博客
-<br/>
+    <strong>Happy every day!!!</strong>
 </body>
 </html>
