--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Brotoo</title>
 </head>
-<body>
+<body style="text-align:center">
     <strong>Happy every day!!!</strong>
 </body>
 </html>
