--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ function loadXMLDoc()
         //alert("status is"+xmlhttp.status);
         if (xmlhttp.readyState==4)
         {
-              console.log(xmlhttp.responseText);
+              alert(xmlhttp.responseText);
         }
     }
     xmlhttp.open("GET",arm);
