--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ function loadXMLDoc()
     }
     xmlhttp.onreadystatechange=function()
     {
-        //alert("status is"+xmlhttp.status);
+        console.log("---*-- status is"+xmlhttp.status);
         if (xmlhttp.readyState==4)
         {
               alert(xmlhttp.responseText);
@@ -23,7 +23,6 @@ function loadXMLDoc()
     xmlhttp.open("GET",arm);
     xmlhttp.send(null);
 }
-loadXMLDoc();
 </script>
 </head>
 <body style="text-align:center">
